# cc2538-pac

./: Cargo.toml  README.md  build.sh  device.x  interrupts.patch
src/: aes.rs  ana_regs.rs  cctest.rs  flash_ctrl.rs  gpio_a.rs  gpio_b.rs  gpio_c.rs  gpio_d.rs  gptimer0.rs  gptimer1.rs  gptimer2.rs  gptimer3.rs  i2cm.rs  i2cs.rs  ioc.rs  lib.rs  pka.rs  rfcore_ffsm.rs  rfcore_sfr.rs  rfcore_xreg.rs  smwdthrosc.rs  soc_adc.rs  ssi0.rs  ssi1.rs  sttest.rs  sys_ctrl.rs  uart0.rs  uart1.rs  udma.rs  usb.rs
src/aes/: aes_auth_length.rs  aes_c_length_0.rs  aes_c_length_1.rs  aes_ctrl.rs  aes_data_in_out_0.rs  aes_data_in_out_1.rs  aes_data_in_out_2.rs  aes_data_in_out_3.rs  aes_iv_0.rs  aes_iv_1.rs  aes_iv_2.rs  aes_iv_3.rs  aes_key2_0.rs  aes_key2_1.rs  aes_key2_2.rs  aes_key2_3.rs  aes_key3_0.rs  aes_key3_1.rs  aes_key3_2.rs  aes_key3_3.rs  aes_tag_out_0.rs  aes_tag_out_1.rs  aes_tag_out_2.rs  aes_tag_out_3.rs  ctrl_alg_sel.rs  ctrl_int_cfg.rs  ctrl_int_clr.rs  ctrl_int_en.rs  ctrl_int_set.rs  ctrl_int_stat.rs  ctrl_options.rs  ctrl_prot_en.rs  ctrl_sw_reset.rs  ctrl_version.rs  dmac_ch0_ctrl.rs  dmac_ch0_dmalength.rs  dmac_ch0_extaddr.rs  dmac_ch1_ctrl.rs  dmac_ch1_dmalength.rs  dmac_ch1_extaddr.rs  (+38 more)
src/ana_regs/: ivctrl.rs
src/cctest/: io.rs  obssel0.rs  obssel1.rs  obssel2.rs  obssel3.rs  obssel4.rs  obssel5.rs  obssel6.rs  obssel7.rs  tr0.rs  usbctrl.rs
src/flash_ctrl/: diecfg0.rs  diecfg1.rs  diecfg2.rs  faddr.rs  fctl.rs  fwdata.rs
src/gpio_a/: afsel.rs  data.rs  dir.rs  gpiocr.rs  gpiolock.rs  ibe.rs  ic.rs  ie.rs  iev.rs  is.rs  mis.rs  (+5 more)
svd/: cc2538sf53.svd
(+570 files in other folders)
