[package]
authors = ["Thibaut Vandervelden <thvdveld@vub.be>"]
description = "Peripheral access API for CC2538 System-on-Chip"
keywords = ["no-std", "arm", "cortex-m", "cc2538"]
name = "cc2538-pac"
version = "0.8.1"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cc2538-pac"
repository = "https://github.com/thvdveld/cc2538-pac"

[dependencies]
critical-section = { version = "1.0", optional = true }
cortex-m = "0.7.6"
cortex-m-rt = { version = "0.7", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
